// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Job should render job 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <li
        class="list-group-item borderless item-less-padding"
      >
        <div
          class="simulation-tab  running"
        >
          <div
            class="card-body card-body-less-padding"
          >
            <p
              class="card-title title"
            >
              <code>
                a12d34
              </code>
            </p>
            <p
              class="job-status"
              data-testid="job-status-a12d34"
            >
              In-Progress
            </p>
            <ul
              class="tags small"
              data-testid="tags"
            />
          </div>
        </div>
      </li>
    </div>
  </body>,
  "container": <div>
    <li
      class="list-group-item borderless item-less-padding"
    >
      <div
        class="simulation-tab  running"
      >
        <div
          class="card-body card-body-less-padding"
        >
          <p
            class="card-title title"
          >
            <code>
              a12d34
            </code>
          </p>
          <p
            class="job-status"
            data-testid="job-status-a12d34"
          >
            In-Progress
          </p>
          <ul
            class="tags small"
            data-testid="tags"
          />
        </div>
      </div>
    </li>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Job should render job as active 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <li
        class="list-group-item borderless item-less-padding"
      >
        <div
          class="simulation-tab active shadow running"
        >
          <div
            class="card-body card-body-less-padding"
          >
            <p
              class="card-title title"
            >
              <code>
                a1d234
              </code>
            </p>
            <p
              class="job-status"
              data-testid="job-status-a1d234"
            >
              In-Progress
            </p>
            <ul
              class="tags small"
              data-testid="tags"
            />
          </div>
        </div>
      </li>
    </div>
  </body>,
  "container": <div>
    <li
      class="list-group-item borderless item-less-padding"
    >
      <div
        class="simulation-tab active shadow running"
      >
        <div
          class="card-body card-body-less-padding"
        >
          <p
            class="card-title title"
          >
            <code>
              a1d234
            </code>
          </p>
          <p
            class="job-status"
            data-testid="job-status-a1d234"
          >
            In-Progress
          </p>
          <ul
            class="tags small"
            data-testid="tags"
          />
        </div>
      </div>
    </li>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
